--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,23 @@
 asgiref==3.3.1
+azure-common==1.1.26
+azure-storage-blob==2.1.0
+azure-storage-common==2.1.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+cryptography==3.3.1
 dj-database-url==0.5.0
 Django==3.1.5
+django-storages==1.11.1
 django-widget-tweaks==1.4.8
+idna==2.10
 psycopg2==2.8.6
+pycparser==2.20
+python-dateutil==2.8.1
 python-dotenv==0.15.0
 pytz==2020.5
+requests==2.25.1
+six==1.15.0
 sqlparse==0.4.1
+urllib3==1.26.2
 whitenoise==5.2.0
