--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dj-database-url==0.5.0
 Django==3.1.5
 django-storages==1.11.1
 django-widget-tweaks==1.4.8
+gunicorn==20.0.4
 idna==2.10
 psycopg2==2.8.6
 pycparser==2.20
@@ -20,4 +21,3 @@ requests==2.25.1
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.2
-whitenoise==5.2.0
